[package]
name = "recovery-tools"
version = "0.1.0"
authors = ["Chris Marslender", "Patrick Maslana"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "^1.0"
base64 = "^0.21"
bech32 = "^0.11"
clap = { version = "^4.5", features = ["derive"] }
clvmr = "^0.9"
chia = "^0.15"
chia-wallet-sdk = "^0.19"
dg_xch_clients = "^2.0"
dg_xch_core = "^2.0"
dirs-next = "^2.0"
flate2 = "^1.0"
hex = "^0.4"
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"